--- a/Simple Games/Base.lproj/Main.storyboard
+++ b/Simple Games/Base.lproj/Main.storyboard
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="A1G-kT-x6Z">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="A1G-kT-x6Z">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Games-->
@@ -15,28 +13,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="80" minimumInteritemSpacing="80" id="Iyz-b6-Oth">
-                            <size key="itemSize" width="600" height="700"/>
+                            <size key="itemSize" width="908" height="650"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="100" minY="100" maxX="100" maxY="100"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="gameCell" id="ovx-ng-NUY" customClass="GameCell" customModule="Simple_Games" customModuleProvider="target">
-                                <rect key="frame" x="100" y="260" width="600" height="700"/>
+                                <rect key="frame" x="100" y="285" width="908" height="650"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="908" height="650"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageWhenAncestorFocused="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jRm-En-ecg">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="908" height="512"/>
                                             <animations/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="jRm-En-ecg" secondAttribute="height" multiplier="1:1" id="5hr-vG-0c5"/>
-                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uw-LB-XrD">
-                                            <rect key="frame" x="268" y="658" width="65" height="33"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uw-LB-XrD">
+                                            <rect key="frame" x="419" y="595" width="70" height="33"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -49,13 +44,14 @@
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="2uw-LB-XrD" firstAttribute="centerX" secondItem="ovx-ng-NUY" secondAttribute="centerX" id="5Bp-iC-hk6"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="2uw-LB-XrD" secondAttribute="bottom" constant="1" id="7fY-Rv-n4c"/>
-                                    <constraint firstAttribute="trailing" secondItem="jRm-En-ecg" secondAttribute="trailing" id="95r-be-UJv"/>
-                                    <constraint firstItem="jRm-En-ecg" firstAttribute="leading" secondItem="ovx-ng-NUY" secondAttribute="leading" id="AlE-g2-xFX"/>
-                                    <constraint firstItem="jRm-En-ecg" firstAttribute="top" secondItem="ovx-ng-NUY" secondAttribute="top" id="qgc-O9-jku"/>
+                                    <constraint firstAttribute="trailing" secondItem="jRm-En-ecg" secondAttribute="trailing" id="2gP-BF-nxt"/>
+                                    <constraint firstItem="2uw-LB-XrD" firstAttribute="centerX" secondItem="ovx-ng-NUY" secondAttribute="centerX" id="Fe7-cf-2PQ"/>
+                                    <constraint firstItem="jRm-En-ecg" firstAttribute="leading" secondItem="ovx-ng-NUY" secondAttribute="leading" id="IYn-Xp-yNI"/>
+                                    <constraint firstItem="jRm-En-ecg" firstAttribute="top" secondItem="ovx-ng-NUY" secondAttribute="top" id="gzG-o6-66u"/>
+                                    <constraint firstAttribute="bottom" secondItem="jRm-En-ecg" secondAttribute="bottom" constant="138" id="oSV-UZ-Ju1"/>
+                                    <constraint firstItem="2uw-LB-XrD" firstAttribute="top" secondItem="jRm-En-ecg" secondAttribute="bottom" constant="83" id="qpE-Cq-iOs"/>
                                 </constraints>
-                                <size key="customSize" width="600" height="700"/>
+                                <size key="customSize" width="908" height="650"/>
                                 <connections>
                                     <outlet property="imageView" destination="jRm-En-ecg" id="VCd-dE-nwM"/>
                                     <outlet property="titleLabel" destination="2uw-LB-XrD" id="9mB-dW-MYq"/>
